ステータスのプルダウン実装

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -21,6 +21,15 @@
     <%= form.text_field :content %>
   </div>
 
+  <div class="field">
+    <%= form.label :終了期限 %>
+    <%= form.date_select :expired_at %>
+  </div>
+
+  <div class="field">
+    <%= form.label :ステータス %>
+    <%= form.select :status, Task.statuses.keys, {prompt: "選択してください"} , class: "status-select"%>
+  </div>
   <div class="actions">
     <%= form.submit %>
   </div>
