--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,8 +5,10 @@
 <table>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Content</th>
+      <th>タスク名</th>
+      <th>詳しい内容</th>
+      <th>修了期限</th>
+      <th>ステータス</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +18,8 @@
       <tr>
         <td class="task_row"><%= task.title %></td>
         <td ><%= task.content %></td>
+        <td ><%= task.expired_at %></td>
+        <td ><%= task.status %></td>
         <td><%= link_to 'Show', task %></td>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
         <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -27,3 +31,4 @@
 <br>
 
 <%= link_to 'New Task', new_task_path %>
+<%= link_to "終了期限でソートする", tasks_path(sort_expired_at: "true") %>
