--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -10,5 +10,16 @@
   <%= @task.content %>
 </p>
 
+<p>
+  <strong>expired_at:</strong>
+  <%= @task.expired_at %>
+</p>
+
+<p>
+  <strong>status:</strong>
+  <%= @task.status %>
+</p>
+
+
 <%= link_to 'Edit', edit_task_path(@task) %> |
 <%= link_to 'Back', tasks_path %>
