終了期限の追加とステータスの追加と検索機能の実装

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div class="field">
     <%= form.label :ステータス %>
-    <%= form.select :status, Task.statuses.keys, {prompt: "選択してください"} , class: "status-select"%>
+    <%= form.select :status, Task.statuses.keys, {prompt: "---"} , class: "status-select"%>
   </div>
   <div class="actions">
     <%= form.submit %>
