--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,13 +1,19 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Tasks</h1>
-
+<h1>タスク一覧</h1>
+<%= form_with(scope: :search,url: tasks_path,local: true, method: :get) do |form| %>
+  <div class="field">
+  タスク名<%= form.text_field :title_search %> ステータス<%= form.select :status, Task.statuses.keys, {prompt: "---"} , class: "status-select"%><%= form.submit value="検索する"%>
+  </div>
+  
+<% end %>
+<%= link_to '新規登録', new_task_path %>
 <table>
   <thead>
     <tr>
       <th>タスク名</th>
       <th>詳しい内容</th>
-      <th>修了期限</th>
+      <th><%= link_to "終了期限", tasks_path(sort_expired_at: "true") %></th>
       <th>ステータス</th>
       <th colspan="3"></th>
     </tr>
@@ -20,9 +26,9 @@
         <td ><%= task.content %></td>
         <td ><%= task.expired_at %></td>
         <td ><%= task.status %></td>
-        <td><%= link_to 'Show', task %></td>
-        <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to '詳細', task %></td>
+        <td><%= link_to '編集', edit_task_path(task) %></td>
+        <td><%= link_to '削除', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,5 +36,4 @@
 
 <br>
 
-<%= link_to 'New Task', new_task_path %>
-<%= link_to "終了期限でソートする", tasks_path(sort_expired_at: "true") %>
+
