優先順位をつける

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -30,6 +30,12 @@
     <%= form.label :ステータス %>
     <%= form.select :status, Task.statuses.keys, {prompt: "---"} , class: "status-select"%>
   </div>
+
+  <div class="field">
+    <%= form.label :優先度 %>
+    <%= form.select :priority, Task.priorities.keys, {prompt: "---"} , class: "priority-select"%>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
