--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -15,6 +15,7 @@
       <th>詳しい内容</th>
       <th><%= link_to "終了期限", tasks_path(sort_expired_at: "true") %></th>
       <th>ステータス</th>
+      <th><%= link_to "優先度", tasks_path(sort_priority: "true") %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -26,6 +27,7 @@
         <td ><%= task.content %></td>
         <td ><%= task.expired_at %></td>
         <td ><%= task.status %></td>
+        <td ><%= task.priority %></td>
         <td><%= link_to '詳細', task %></td>
         <td><%= link_to '編集', edit_task_path(task) %></td>
         <td><%= link_to '削除', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
