--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -20,6 +20,10 @@
   <%= @task.status %>
 </p>
 
+<p>
+  <strong>priority:</strong>
+  <%= @task.priority %>
+</p>
 
 <%= link_to 'Edit', edit_task_path(@task) %> |
 <%= link_to 'Back', tasks_path %>
