ページネーションを実装

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -21,7 +21,6 @@
   </thead>
 
   <tbody>
-
     <% @tasks.each do |task| %>
       <tr>
         <td class="task_row"><%= task.title %></td>
@@ -36,7 +35,7 @@
     <% end %>
   </tbody>
 </table>
-
+<%= paginate @tasks%>
 <br>
 
 
