--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -3,19 +3,19 @@
 <h1>タスク一覧</h1>
 <%= form_with(scope: :search,url: tasks_path,local: true, method: :get) do |form| %>
   <div class="field">
-  タスク名<%= form.text_field :title_search %> ステータス<%= form.select :status, Task.statuses.keys, {prompt: "---"} , class: "status-select"%><%= form.submit value="検索する"%>
+  タスク名<%= form.text_field :title_search ,placeholder: "検索..."%> ステータス<%= form.select :status, Task.statuses.keys, {prompt: "---"} , class: "status-select"%><%= form.submit value="検索する"%>
   </div>
   
 <% end %>
-<%= link_to '新規登録', new_task_path %>
-<table>
+<button type="button" class="btn btn-primary"><%= link_to '新規登録', new_task_path %></button>
+<table class="table">
   <thead>
     <tr>
-      <th>タスク名</th>
-      <th>詳しい内容</th>
-      <th><%= link_to "終了期限", tasks_path(sort_expired_at: "true") %></th>
-      <th>ステータス</th>
-      <th><%= link_to "優先度", tasks_path(sort_priority: "true") %></th>
+      <th scope="col">タスク名</th>
+      <th scope="col">詳しい内容</th>
+      <th scope="col"><%= link_to "終了期限", tasks_path(sort_expired_at: "true") %></th>
+      <th scope="col">ステータス</th>
+      <th scope="col"><%= link_to "優先度", tasks_path(sort_priority: "true") %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
