--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -14,6 +14,7 @@
       <th scope="col">タスク名</th>
       <th scope="col">詳しい内容</th>
       <th scope="col"><%= link_to "終了期限", tasks_path(sort_expired_at: "true") %></th>
+      <th scope="col">登録日時</th>
       <th scope="col">ステータス</th>
       <th scope="col"><%= link_to "優先度", tasks_path(sort_priority: "true") %></th>
       <th colspan="3"></th>
@@ -22,10 +23,11 @@
 
   <tbody>
     <% @tasks.each do |task| %>
-      <tr>
-        <td class="task_row"><%= task.title %></td>
+      <tr class="task_row">
+        <td ><%= task.title %></td>
         <td ><%= task.content %></td>
         <td ><%= task.expired_at %></td>
+        <td ><%= task.created_at %></td>
         <td ><%= task.status %></td>
         <td ><%= task.priority %></td>
         <td><%= link_to '詳細', task %></td>
