ユーザとタスクを紐づける

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -11,6 +11,7 @@
 <table class="table">
   <thead>
     <tr>
+      <th scope="col">名前</th>
       <th scope="col">タスク名</th>
       <th scope="col">詳しい内容</th>
       <th scope="col"><%= link_to "終了期限", tasks_path(sort_expired_at: "true") %></th>
@@ -24,6 +25,7 @@
   <tbody>
     <% @tasks.each do |task| %>
       <tr class="task_row">
+        <td ><%= task.user.name %></td>
         <td ><%= task.title %></td>
         <td ><%= task.content %></td>
         <td ><%= task.expired_at %></td>
