--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>タスク一覧</h1>
+<h1><%= current_user.name %>のタスク一覧</h1>
 <%= form_with(scope: :search,url: tasks_path,local: true, method: :get) do |form| %>
   <div class="field">
   タスク名<%= form.text_field :title ,placeholder: "検索..."%> ステータス<%= form.select :status, Task.statuses.keys, {prompt: "---"} , class: "status-select"%><%= form.submit value="検索する"%>
