--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,8 +1,9 @@
 <h1>管理画面<h1>
-<h2>ユーザー一覧<h2>
+<h3>ユーザー 一覧<h2>
 <table class="table">
   <thead>
     <tr>
+      <th scope="col">管理者</th>
       <th scope="col">名前</th>
       <th scope="col">メール</th>
       <th scope="col">タスク数</th>
@@ -12,17 +13,14 @@
   <tbody>
     <% @users.each do |user| %>
       <tr class="task_row">
+        <td ><%= user.admin %></td>
         <td ><%= user.name %></td>
         <td ><%= user.email %></td>
-        <td ><%= user.email %></td>
+        <td ><%= user.tasks.count %></td>
 
-        <td><%= link_to '詳細', user %></td>
-        <%
-=begin%>
- <td><%= link_to '編集', edit_user_path(task) %></td>
-        <td><%= link_to '削除', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>  
-<%
-=end%>
+        <td><%= link_to '詳細', admin_user_path(user) %></td>
+        <td><%= link_to '編集', edit_admin_user_path(user) %></td>
+        <td><%= link_to '削除', admin_user_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></td>   
 
       </tr>
     <% end %>
