--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -11,7 +11,7 @@
   </div>
 <% end %>
 
-<%= form_with(model: @user, local: true) do |f| %>
+<%= form_with(model:[ :admin, @user ], local: true) do |f| %>
   <%= f.label :管理者 %>
   <%= f.select :admin, Task.admins.keys, {prompt: "選択してください"} , class: "admin-select"%>
 
