--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,9 +2,9 @@
 
 <p>メールアドレス: <%= @user.email %></p>
 
-<%= link_to 'タスク一覧', tasks_path %>
+<%= link_to 'タスク一覧へ', tasks_path %>
 
 <% if current_user.admin == true %>
-<%= link_to '管理画面', admin_users_path %>
+<%= link_to '管理画面へ', admin_users_path %>
 <% else %>
 <% end %>
