--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -19,6 +19,12 @@
   <strong>status:</strong>
   <%= @task.status %>
 </p>
+<p>
+  <strong>label:</strong>
+  <% @task.labels.each do |label| %>
+    <%= label.name %>
+  <% end %>
+</p>
 
 <p>
   <strong>priority:</strong>
