ラベル登録画面実装

--- a/app/views/labels/index.html.erb
+++ b/app/views/labels/index.html.erb
@@ -1,11 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Labels</h1>
+<h1>ラベル</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th>名前</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,9 +14,9 @@
     <% @labels.each do |label| %>
       <tr>
         <td><%= label.name %></td>
-        <td><%= link_to 'Show', label %></td>
-        <td><%= link_to 'Edit', edit_label_path(label) %></td>
-        <td><%= link_to 'Destroy', label, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to '詳細', label %></td>
+        <td><%= link_to '編集', edit_label_path(label) %></td>
+        <td><%= link_to '削除', label, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +24,5 @@
 
 <br>
 
-<%= link_to 'New Label', new_label_path %>
+<%= link_to '新しいラベル', new_label_path %>
+<%= link_to '管理画面へ', admin_users_path %>
