--- a/app/views/labels/new.html.erb
+++ b/app/views/labels/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Label</h1>
+<h1>新しいラベル</h1>
 
 <%= render 'form', label: @label %>
 
-<%= link_to 'Back', labels_path %>
+<%= link_to '戻る', labels_path %>
