--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -36,10 +36,10 @@
     <%= form.select :priority, Task.priorities.keys, {prompt: "---"} , class: "priority-select"%>
   </div>
 
-  
+  <div class="field">
   <%= form.label :ラベル %>
     <%= form.collection_check_boxes(:label_ids, Label.all, :id, :name)%>
-  
+  </div>
 
   <div class="actions">
     <%= form.submit %>
